align fix

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body {
   align-items: center;
   flex-wrap: wrap;
   width: 60%;
-  margin: 3rem auto 0px auto;
+  margin: 3rem auto 1rem auto;
   font-size: 20px;
   height: 6rem; }
   @media only screen and (max-width: 420px) {
@@ -66,7 +66,8 @@ body {
 .main {
   display: flex;
   justify-content: center;
-  max-width: 100%; }
+  max-width: 100%;
+  margin-top: 1rem; }
   @media only screen and (max-width: 360px) {
     .main {
       margin-top: 1rem; } }
@@ -133,12 +134,18 @@ body {
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: center; } }
+    @media (min-width: 1728px) {
+      .main__content--card {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: unset !important; } }
     .main__content--pagination {
       display: flex;
       justify-content: space-between;
       width: 100%;
       color: #fff;
-      max-width: 72rem;
+      max-width: 91%;
       margin-left: 2rem; }
       .main__content--pagination--button {
         cursor: pointer; }
