--- a/sass/components/_tags.scss
+++ b/sass/components/_tags.scss
@@ -4,7 +4,7 @@
     align-items: center;
     flex-wrap: wrap;
     width: 60%;
-    margin: 3rem auto 0px auto;
+    margin: 3rem auto 1rem auto;
     font-size: 20px;
     height: 6rem;
     
